--- a/FragmentCommunication/app/src/main/res/layout-land/activity_main.xml
+++ b/FragmentCommunication/app/src/main/res/layout-land/activity_main.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="horizontal">
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/frameLayoutMaster"
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_centerInParent="true"
+        android:layout_width="0sp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
     />
 
-</RelativeLayout>
+    <FrameLayout
+        android:id="@+id/frameLayoutDetail"
+
+        android:layout_width="0sp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+
+</LinearLayout>
