--- a/2aEv/FragmentsExamenAnhoPasado/app/src/main/res/layout/detail_fragment.xml
+++ b/2aEv/FragmentsExamenAnhoPasado/app/src/main/res/layout/detail_fragment.xml
@@ -5,18 +5,17 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView01"
+        android:id="@+id/muchoTexto"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:text=""
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textStyle="italic"
 
+        android:layout_marginTop="100sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60sp"
     />
 
 </RelativeLayout>
